--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^5.22.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
@@ -18,6 +19,7 @@
   "dependencies": {
     "@fastify/formbody": "^8.0.1",
     "@prisma/client": "5.22.0",
-    "fastify": "^5.1.0"
+    "fastify": "^5.1.0",
+    "nodemailer": "^6.9.16"
   }
 }
