--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.9.0",
-    "@types/nodemailer": "^6.4.17",
     "prisma": "^5.22.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
@@ -20,6 +19,6 @@
     "@fastify/formbody": "^8.0.1",
     "@prisma/client": "5.22.0",
     "fastify": "^5.1.0",
-    "nodemailer": "^6.9.16"
+    "resend": "^4.0.1"
   }
 }
